[Feature] Update role-based access control to use SERVICE_ADMIN and VIEWER roles